# pluralgit

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs  pkjson.rs
