[package]
name = "pluralgit"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
clap = { version = "4.5.60", features = ["derive"] }
git2 = { version = "0.20.4" }

serde = { version = "1.0" , features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.17.0", features = ["macros"]} 